# CGCourse2026

./: .gitignore  .gitmodules  CMakeLists.txt  comandi.txt
src/: CMakeLists.txt
src/code_00_raytracer/: main_rt.cpp
src/code_021_my_first_triangle_mod/: CMakeLists.txt  main_021.cpp
src/code_02_my_first_triangle/: main_02.cpp
src/code_041_robotic_arm_2D/: CMakeLists.txt  main_041.cpp
src/code_05_assonometry/: main_05.cpp
src/code_06_arm_rotations/: main_06.cpp
src/code_06_arm_rotations/shaders/: basic.frag  basic.vert
src/code_07_trackball/: CMakeLists.txt  main_07.cpp
src/code_07_trackball/shaders/: basic.frag  basic.vert
src/code_08_raster/: CMakeLists.txt  main_08.cpp
src/code_08_raster/shaders/: basic.frag  basic.vert  flat.frag  flat.vert
src/code_09_lighting_shading/: CMakeLists.txt  main_09.cpp
src/code_09_lighting_shading/shaders/: basic.frag
src/code_10_gltf_loader/: CMakeLists.txt  main_10.cpp
src/code_10_gltf_loader/shaders/: basic.frag  basic.vert
src/code_11_metaballs/: CMakeLists.txt
src/code_11_metaballs/shaders/: basic.frag  basic.vert
src/common/: gltf_loader.h  renderable.h  simple_shapes.h  texture.h  trackball.h
